tests/machine/x/ocaml/test_block.error
File "/tmp/TestOCamlCompiler_VMValid_Goldentest_block962362728/001/test_block.ml", line 6, characters 2-15:
6 |   print_endline ("ok");
      ^^^^^^^^^^^^^
Error: Syntax error
