tests/machine/x/ocaml/test_block.ml
(* Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z *)

let () =
  let x : int = (1 + 2) in
  assert ((x = 3))
  print_endline ("ok");
